# nova-prompt-optimizer

./: .gitignore  .sesskey  CODEOWNERS  PR-SDK-DSPy-Compatibility-Fix.md  README.md  nova-sdk-dspy-compatibility-issue.md  nova-sdk-modification-report.md  nova-sdk-thread-lock-serialization-issue.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  codeql.yml  git-secrets-scan.yml  publish.yml
.kiro/steering/: product.md  structure.md  tech.md
docs/: DatasetAdapter.md  Optimizers.md  PromptAdapter.md
frontend/: .gitignore  README.md  app.py  config.py  database.py  prompt_templates.py  requirements.txt  sdk_worker.py
frontend/components/: generator_components.py  layout.py  metrics_page.py  navbar.py  prompt_builder.py  ui.py
frontend/docs/: ARCHITECTURE.md  FEATURES.md  README.md
frontend/routes/: dataset_generator.py  dataset_generator.py.backup  datasets.py  metrics.py  metrics_infer_assets.py  optimization.py  prompt_builder.py  prompt_generator.py  prompts.py  simple_generator.py  simple_optimizer.py
frontend/services/: dataset_conversation.py  metric_service.py  prompt_builder.py  prompt_generator_service.py  sample_generator.py  simple_dataset_generator.py
frontend/static/: prompt_builder.js.bak
frontend/temp_results/: result_1757519047641224.json  result_inflated_1757557784453.json  result_inflated_1757560531388.json  result_regenerated_1757524344283.json  result_regenerated_1757524415716.json  result_regenerated_1757533584012.json  result_regenerated_1757557631469.json  result_regenerated_1757560385104.json  (+2 more)
(+62 files in other folders)
